# clidantic

./: pyproject.toml
.github/workflows/: test.yml
